# secure_boot_manager

./: .gitignore  Cargo.toml  Readme.md
core_con_out/: Cargo.toml
core_con_out/src/: lib.rs
mu_rust_ex/: Cargo.toml
mu_rust_ex/src/: auth_variable.rs  boot.rs  con_in.rs  conout.rs  image_authentication.rs  lib.rs  protocol_utility.rs  protocol_wrapper.rs  runtime.rs  rustified.rs  shell_parameters_protocol.rs  shell_protocol.rs  variable.rs
mu_rust_ex/test_data/: mod.rs
panic/: Cargo.toml
panic/src/: lib.rs
src/: auth_variable.rs  boot.rs  image_authentication.rs  main.rs  runtime.rs  shell_protocol.rs  util.rs
src/test_data/: sig_lists.rs
string/: Cargo.toml
string/src/: encoder.rs  lib.rs  macros.rs  os_str.rs  os_string.rs
uefi_bs_allocator/: Cargo.toml
uefi_bs_allocator/src/: lib.rs
