[package]
name = "secure-boot-manager"
version = "0.1.0"
authors = ["Bret Barkelew <brbarkel@microsoft.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# This is needed while mu_rust is private in the Microsoft organization.
[net]
git-fetch-with-cli = true

#[package.metadata.cargo-xbuild]
#memcpy = false

# Bring this in to help debug.
[dependencies]
x86_64="*"

[dependencies.our-efi]
git = "https://github.com/microsoft/mu_rust.git"
branch = "personal/brbarkel/secure_boot_manager"

[dependencies.uefi]
git = "https://github.com/microsoft/mu_rust.git"
branch = "personal/brbarkel/secure_boot_manager"
#features = ["bs-intrinsics"]

[dependencies.string]
git = "https://github.com/microsoft/mu_rust.git"
branch = "personal/brbarkel/secure_boot_manager"

[dependencies.allocation]
git = "https://github.com/microsoft/mu_rust.git"
branch = "personal/brbarkel/secure_boot_manager"

[dependencies.panic]
git = "https://github.com/microsoft/mu_rust.git"
branch = "personal/brbarkel/secure_boot_manager"
