[package]
name = "secure-boot-manager"
version = "0.1.0"
authors = ["Bret Barkelew <brbarkel@microsoft.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
r-efi = "4.0.0"
core-con-out = { path = 'core_con_out' }
mu-rust-ex = { path = "mu_rust_ex" }
uefi-bs-allocator = { path = "uefi_bs_allocator" }
panic = { path = 'panic' }
menu = "*"
