[package]
name = "mu-rust-ex"
version = "0.0.1"
authors = ["Bret Barkelew <brbarkel@microsoft.com>"]
edition = "2018"
publish = false

[dependencies]
r-efi = "4.0.0"
r-efi-string = "*"
core-con-out = { path = "../core_con_out" }
spin = "*"
lazy_static = { version = "*", features = ['spin_no_std'] }
string = { path = "../string" }
