[package]
name = "string"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# no features by default
#default = ["string"]
default = ["string"]

string = []

[dependencies]
