[package]
name = "uefi-bs-allocator"
version = "0.1.0"
edition = "2021"
authors = ["Bret Barkelew <brbarkel@microsoft.com>", "Michael Kubacki <Michael.Kubacki@microsoft.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-efi = "*"
spin = "*"
